# opengloves-driver

./: .clang-format  .editorconfig  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  CMakePresets.json  NOTICE.md  OpenGloves.sln  OpenGloves.vcxproj  README.md  vcpkg.json
LucidGloves/: LucidGloves.filters  LucidGloves.sln  LucidGloves.vcxproj
cmake/: FindOpenVR.cmake  Findbluetooth.cmake  steamvrPaths.cmake
docs/: Building.md  Compatability.md  Compatibility.md  Installation.md  Limitations.md
driver/: CMakeLists.txt
driver/include/: device_provider.h
driver/opengloves/: driver.vrdrivermanifest
driver/opengloves/resources/: driver.vrresources
driver/opengloves/resources/anims/: glove_anim.glb
driver/opengloves/resources/input/: opengloves_profile.json
driver/opengloves/resources/settings/: default.vrsettings
driver/overlay/: CMakeLists.txt  main.cpp
driver/src/: CMakeLists.txt  device_provider.cpp  driver_factory.cpp
driver/src/device/: CMakeLists.txt
driver/src/device/configuration/: CMakeLists.txt  device_configuration.cpp  device_configuration.h
driver/src/device/drivers/: CMakeLists.txt  device_driver.cpp  device_driver.h  knuckle_device_driver.cpp  knuckle_device_driver.h
driver/src/device/pose/: CMakeLists.txt  device_pose.cpp  device_pose.h  pose_calibration.cpp  pose_calibration.h
driver/src/device/providers/: CMakeLists.txt  physical_device_provider.cpp  physical_device_provider.h
driver/src/device_configuration/: CMakeLists.txt  device_configuration.cpp  device_configuration.h
driver/src/device_drivers/: CMakeLists.txt  knuckle_device_driver.cpp
driver/src/device_pose/: CMakeLists.txt
driver/src/device_providers/: CMakeLists.txt  physical_device_provider.cpp  physical_device_provider.h
driver/src/external_services/: CMakeLists.txt  driver_external.cpp  driver_external.h  driver_internal.cpp  tracking_reference_discovery.cpp  tracking_reference_discovery.h  webserver_logging.h
driver/src/hand_tracking/: CMakeLists.txt  anim_loader.cpp  anim_loader.h  hand_tracking.cpp  hand_tracking.h
driver/src/services/: CMakeLists.txt  driver_external.cpp  driver_external.h  driver_internal.cpp  driver_internal.h  webserver_logging.cpp  webserver_logging.h
driver/src/util/: CMakeLists.txt  driver_log.cpp  driver_log.h  driver_math.cpp  driver_math.h  file_path.h  file_path_linux.cpp  file_path_win.cpp  win_util.cpp  win_util.h
include/: Bones.h  Calibration.h  ControllerDiscovery.h  ControllerPose.h  DeviceConfiguration.h  DeviceProvider.h  DriverLog.h  ForceFeedback.h  Pipe.h  Quaternion.h
openglove/: driver.vrdrivermanifest
openglove_overlay/: CMakeLists.txt  main.cpp  main.h
overlay/: CMakeLists.txt  main.cpp  main.h
server/: CMakeLists.txt
server/include/: opengloves_interface.h
server/lib/: CMakeLists.txt
server/lib/miniosc/: miniosc.h
server/lib/named_pipe/: named_pipe_win.h
server/lib/win/: win_util.cpp  win_util.h
server/src/: CMakeLists.txt  device_discovery.cpp  opengloves_device.cpp  opengloves_server.cpp
server/src/communication/: CMakeLists.txt
server/src/communication/encoding/: CMakeLists.txt  alpha_encoding_service.cpp  alpha_encoding_service.h  encoding_service.h
server/src/communication/encoding/alpha/: alpha_encoding_service.cpp  alpha_encoding_service.h
server/src/communication/encoding/alpha_encoding/: alpha_encoding_service.cpp
server/src/communication/managers/: CMakeLists.txt  communication_manager.cpp  communication_manager.h  hardware_communication_manager.cpp  hardware_communication_manager.h  named_pipe_communication_manager.cpp  named_pipe_communication_manager.h  queryable_communication_manager.cpp
server/src/communication/probers/: CMakeLists.txt  communication_prober.h  prober.h  prober_bluetooth.h  prober_bluetooth_connectable.cpp  prober_bluetooth_connectable.h  prober_bluetooth_identifiers_win.cpp  prober_bluetooth_identifiers_win.h  prober_bluetooth_linux.h  prober_bluetooth_win.cpp  prober_bluetooth_win.h  prober_manager.cpp  prober_serial_connectable.cpp  prober_serial_connectable.h  prober_serial_identifiers_win.cpp  prober_serial_identifiers_win.h  prober_serial_win.cpp  prober_serial_win.h
server/src/communication/probers/bluetooth/: prober_bluetooth.h  prober_bluetooth_win.cpp  prober_bluetooth_win.h
server/src/communication/probers/serial/: prober_serial.h  prober_serial_linux.h  prober_serial_win.cpp  prober_serial_win.h
server/src/communication/services/: CMakeLists.txt  communication_service.h  service_bluetooth.h  service_bluetooth_linux.cpp  service_bluetooth_linux.h  service_bluetooth_win.cpp  service_bluetooth_win.h  service_serial.h  service_serial_linux.cpp  service_serial_linux.h  service_serial_win.cpp  service_serial_win.h
server/src/communication/services/bluetooth/: service_bluetooth.h  service_bluetooth_win.cpp  service_bluetooth_win.h
server/src/communication/services/serial/: service_serial.h  service_serial_win.cpp  service_serial_win.h
server/src/device/: CMakeLists.txt  opengloves_device.cpp
server/src/device/devices/: CMakeLists.txt  lucidgloves_device.cpp  lucidgloves_device.h
server/src/device/discovery/: CMakeLists.txt  device_discovery.h  lucidgloves_fw_discovery.cpp  lucidgloves_fw_discovery.h  lucidgloves_named_pipe_discovery.cpp  lucidgloves_named_pipe_discovery.h
server/src/device/lucidgloves/: CMakeLists.txt  lucidgloves_device.cpp  lucidgloves_device.h
server/src/device/lucidgloves/discovery/: lucidgloves_fw_discovery.cpp  lucidgloves_fw_discovery.h  lucidgloves_named_pipe_discovery.cpp  lucidgloves_named_pipe_discovery.h
server/src/ipc/grpc/: CMakeLists.txt  grpc_device_output.cpp  grpc_device_output.h
server/src/server/: CMakeLists.txt  device_discovery.cpp  device_discovery.h  opengloves_server.cpp
server/src/services/: CMakeLists.txt
server/src/services/input/: CMakeLists.txt  input_force_feedback_named_pipe.cpp  input_force_feedback_named_pipe.h
server/src/services/output/: CMakeLists.txt  output_osc.cpp  output_osc.h
src/: Bones.cpp  Calibration.cpp  ControllerDiscovery.cpp  ControllerPose.cpp  (+7 more)
(+119 files in other folders)
