add_library(device_providers STATIC physical_device_provider.h physical_device_provider.cpp hook_device_provider.h hook_device_provider.cpp)

find_package(OpenVR REQUIRED)

target_link_libraries(device_providers PUBLIC driver-includes OpenVR::OpenVR opengloves_interface-includes device_drivers)
target_link_libraries(device_providers PRIVATE driver_utils device_configuration driver_services)