add_library(communication_managers STATIC communication_manager.h communication_manager.cpp)

target_include_directories(communication_managers PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")

target_link_libraries(communication_managers PRIVATE opengloves_server-includes communication-includes communication_services encoding_services)