add_library(device_discoverers STATIC device_discovery.h lucidgloves_fw_discovery.h lucidgloves_fw_discovery.cpp)

target_link_libraries(device_discoverers PUBLIC device-includes opengloves_server-includes communication-includes)
target_link_libraries(device_discoverers PRIVATE opengloves_devices encoding_services communication_probers communication_services communication_managers)